--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@hypernym/nuxt-gsap": "^2.4.2",
+    "@pinia/nuxt": "^0.5.1",
     "@vueuse/nuxt": "^10.9.0",
     "nanoid": "^5.0.6",
     "nuxt": "^3.11.1",
+    "pinia": "^2.1.7",
+    "split-type": "^0.3.4",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.11.4"
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "typescript": "^5.4.4"
   }
 }
