--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "test": "vitest --dom",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -21,7 +22,13 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@nuxt/test-utils": "^3.12.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "typescript": "^5.4.4"
+    "@pinia/testing": "^0.1.3",
+    "@vue/test-utils": "^2.4.5",
+    "happy-dom": "^13.10.1",
+    "playwright-core": "^1.43.0",
+    "typescript": "^5.4.4",
+    "vitest": "^1.4.0"
   }
 }
